# s3notebook

./: README.md  setup.cfg  setup.py
s3contents/: s3manager.py
