[metadata]
name = s3contentmanager
summary = Content Maanager Extension for notebook to read from S3
description-file =
    README.md
author = Moe Faraji
zip_safe = false
author-email = faraji66@gmail.com
classifier =
    Environment :: Apache
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    s3ContentManager
    aws
    notebook

[files]
packages =
    s3contentmanager


[bdist_wheel]
universal = 1

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes = setup.py

[tool:pytest]
norecursedirs = build docs/_build *.egg .tox *.venv
addopts =
    --verbose --tb short --capture no
    --cov=boogie
    --cov-report=term-missing
    tests/

[flake8]
exclude = .git,__pycache__,dist,build,debian,*.egg,.tox,*.venv,og_tests,og_tests_new,tests_better,ez_setup.py,setup.py
ignore = E501,E123,E731,E402
